test/test_examples/syntactic_examples/syntax_error/error_statement_12.zig
// Syntax error: missing semicolon after pseudovariable

const ifj = @import("ifj24.zig"); 

pub fn main() void {
    _ = 10
}